<resources
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation"
    >
    <string name="app_name">2Yum</string>
    <string name="NEARBY">Nearby</string>
    <string name="FAVORITES">Favorites</string>
    <string name="ORDERS">Orders</string>
    <string name="ME">Me</string>
    <string name="MENU">Menu</string>
    <string name="STATS">Stats</string>
    <string name="DELIVERYADDRESSZIP">Delivery Address,ZIP</string>
    <string name="ALLOW2YUMTOACCESSYOURLOCATIONWHILEYOUUSETHEAPP">Allow "2Yum" to access your location while you use the app？</string>
    <string name="YUMUSESYOURLOCATIONTOSHOWYOUFOODNEARBY">2Yum uses your location to show you food nearby</string>
    <string name="DONTALLOW">Don\'t Allow</string>
    <string name="ALLOW">Allow</string>
    <string name="DISTANCERECENT">Distance</string>
    <string name="FAVORITESALL">Favorites</string>
    <string name="FILTERS">Filters</string>
    <string name="YUMWOULDLIKETOSENDYOUNOTIFICATIONS">"2Yum" Would Like to Send You Notifications</string>
    <string name="NOTIFICATIONSMAYINCLUDEALERTSSOUNDSANDICONBADGESTHESECANBECONFIGUREDINSETTINGS">Notifications may include alerts,sounds,and icon badges.These can be configured in Settings.</string>
    <string name="MILE">Mile</string>
    <string name="CLOSED">Closed</string>
    <string name="NOSERVICENEARBY">No Service Nearby</string>
    <string name="WILLSOONHAVESERVICESTAYTUNEDYOUCANLISTMENUTOPROVIDESERVICESERVETHECOMMUNITYANDEARNINCOME">Coming soon, stay tuned. You can list menu to provide service. Serve the community and earn income.</string>
    <string name="LISTYOURMENUYOU">List your menu</string>
    <string name="LOCATIONSERVICESDISABLED">Location Services Disabled</string>
    <string name="YUM2USESYOURLOCATIONTOSHOWYOUFOODNEARBY">2Yum uses your location to show you food nearby</string>
    <string name="GOTOSETTINGSPRIVACYLOCATIONSERVICES2YUMUSESYOURLOCATIONTOSHOWYOUFOODNEARBY">Go to Settings &gt; Privacy &gt; Location Services,2Yum uses your location to show you food nearby.</string>
    <string name="GOTURNON">Turn On</string>
    <string name="RESET">Reset</string>
    <string name="SEEFILTERRESULTS">See Filter Results</string>
    <string name="NEARBYLOCATION">Nearby/Location</string>
    <string name="YOURDELIVERYADDRESS">Enter your delivery address</string>
    <string name="CREATEACCOUNT">Create Account</string>
    <string name="LOGIN">Log in</string>
    <string name="EMAIL">Email</string>
    <string name="PASSWORDS820CHARACTERS">Passwords/8-20 characters</string>
    <string name="FORGOTPASSWORD">Forgot Password？</string>
    <string name="WRONGEMAILORPASSWORD">Wrong email or password</string>
    <string name="BYUSINGTHE2YUMAPPYOUAREAGREEINGTO2YUMSTERMSOFUSEANDPRIVACYPOLICY">By using the 2Yum app，you are agreeing to 2Yum\'S Terms of Use and Privacy Policy.</string>
    <string name="BYUSINGTHE2YUMAPPYOUAREAGREEINGTO2YUMS">By registering you agree to our</string>
    <string name="BYPROCEEDINGYOUAGREEWITHTHE">By proceeding, you agree with the</string>
    <string name="TERMSOFSERVICE"> Terms of Use </string>
    <string name="AND">and</string>
    <string name="PRIVACYPOLICY"> Privacy Policy </string>
    <string name="YUMWOULDLIKETOACCESSYOURPHOTOS">“2Yum” Would Like to Access Your Photos</string>
    <string name="RIGHT">OK</string>
    <string name="SUBMIT">Submit</string>
    <string name="ENTERYOUREMAILADDRESSANDWELLSENDYOUANEMAILCONTAININGALINKTORESETYOURPASSWORD">Enter your email address and we\'ll send you an email containing a link to reset your password.</string>
    <string name="CANCEL">Cancel</string>
    <string name="DELIVERYCOST">Delivery</string>
    <string name="MIN">min</string>
    <string name="SHARE">Share</string>
    <string name="REPORTBUSINESS">Report</string>
    <string name="REPORT">Report</string>
    <string name="RETURNANDEMPTYSHOPPINGCART">Return and empty shopping cart?</string>
    <string name="YES">Yes</string>
    <string name="CONTINUE">Continue</string>
    <string name="PHOTOORCONTENTINCORRECT">Photo or content incorrect</string>
    <string name="DISHONESTORFAKECONTENT">Dishonest or Fake content</string>
    <string name="NOTFRESHORUNSAFE">Not fresh or Unsafe</string>
    <string name="POORSERVICE">Poor service</string>
    <string name="SPAMORPROMOTIONALAD">Spam or promotional ad</string>
    <string name="UNAUTHORIZEDORINFRINGEMENT">Unauthorized or infringement</string>
    <string name="HATREDORINAPPROPRIATECONTENT">Inappropriate content</string>
    <string name="SUBMITORDER">Submit Order</string>
    <string name="CHOOSEDELIVERYADDRESS">Choose Delivery Address</string>
    <string name="REQUIREDS">Required</string>
    <string name="REQUIREDS1">（Required）</string>
    <string name="SERVICE">Service</string>
    <string name="TOTAL">Total</string>
    <string name="PLEASEPAY20TIPTODRIVER">*Please pay 20% tip to driver</string>
    <string name="CREDITDEBITCARDS">Credit/Debit Card</string>
    <string name="PROVIDE">Provide</string>
    <string name="REMOVE">Remove</string>
    <string name="PLACEORDER">Place Order</string>
    <string name="TODAY">Today</string>
    <string name="TODAY1">Today</string>
    <string name="SDELIVERYADDRESS">Delivery address</string>
    <string name="DELIVERYTIME">Delivery time</string>
    <string name="ORDERUNSUCCESSFUL">Order unsuccessful</string>
    <string name="CARDHOLDERSNAME">Cardholder\'s Name</string>
    <string name="CARDNUMBER">Card Number</string>
    <string name="EXPIRATIONDATE">Expiration Date</string>
    <string name="CVV">CVV code</string>
    <string name="CREDITCARDERROR">Credit card error</string>
    <string name="NETWORKTIMEOUTPLEASEREORDER">Network timeout，Please reorder</string>
    <string name="DELETE">Delete</string>
    <string name="OUTSIDEDELIVERYAREA">Outside delivery area</string>
    <string name="NAME1">Name</string>
    <string name="NAME2">Name:</string>
    <string name="MR">Mr</string>
    <string name="MS">Ms</string>
    <string name="PHONE">Phone</string>
    <string name="PHONE1">Phone:</string>
    <string name="PS">P.S.</string>
    <string name="PS1">P.S.:</string>
    <string name="PSOPTIONAL">P.S.(Opcional)</string>
    <string name="OPTIONAL">Optional</string>
    <string name="EGAPTSUITECOMPANYNAME">E.g.Apt/Suite#/Company name</string>
    <string name="ADDADDRESS">Add Address</string>
    <string name="HELP">Help</string>
    <string name="PAYMENTSUCCESSFUL">Payment successful</string>
    <string name="CANCELORDER">Cancel order</string>
    <string name="MINSUNANSWEREDAUTOMATICALLYCANCEL">5 mins unanswered/automatically cancel</string>
    <string name="COPY">Copy</string>
    <string name="ORDERNO">Order#</string>
    <string name="ORDERNO1">Order#:</string>
    <string name="ORDERTIME">Time</string>
    <string name="ORDERTIME1">Time:</string>
    <string name="DELIVERYORTIME">Delivery time</string>
    <string name="DELIVERYORTIME1">Delivery time:</string>
    <string name="DELIVERYORTIME2">Delivery:</string>
    <string name="PAYMETHOD">Pay</string>
    <string name="PAYMETHOD1">Pay:</string>
    <string name="PREPARING">In process</string>
    <string name="DELIVERYNOW">Delivery</string>
    <string name="THENDELIVERED">Delivered</string>
    <string name="THENCANCELED">Canceled</string>
    <string name="ORDERSINPRODUCTIONCANNOTBECANCELED">Orders in production cannot be canceled</string>
    <string name="ONMYWAY">In transt</string>
    <string name="WELCOMEBACK">Welcome back</string>
    <string name="PLEASEREORDER">Please reorder</string>
    <string name="ORDERTRACKING">Order tracking</string>
    <string name="WRONGORDER">Wrong order</string>
    <string name="ANYOTHERPROBLEM">Any other problem</string>
    <string name="MERCHANT">Merchant</string>
    <string name="PLEASECONTACTMERCHANTIMMEDIATELY">Please contact merchant immediately</string>
    <string name="PLEASECONTACTTHEMERCHANTIMMEDIATELYORINFORM2YUM">Please contact the merchant or 2Yum</string>
    <string name="CALLPHONE">Call</string>
    <string name="CALL">Call</string>
    <string name="MESSAGE">Message</string>
    <string name="SHAREFRIENDS">Share friends</string>
    <string name="LISTYOURMENU">List your menu</string>
    <string name="SETTINGS">Settings</string>
    <string name="SWITCHTOBUSINESS">Switch to business</string>
    <string name="SWITCHTOORDER">Switch to order</string>
    <string name="BIRTHDATE">Birth Date</string>
    <string name="DONE">Done</string>
    <string name="CHANGINGYOUREMAILADDRESSWILLALSOCHANGEYOUR2YUMEMAILLOGINAREYOUSUREYOUWANTTOCONTINUE">Changing your email address will also change your 2Yum email login.Are you sure you want to continue?</string>
    <string name="VERSION">Version</string>
    <string name="LOGOUT">Log Out</string>
    <string name="SERVETHECOMMUNITYANDEARNINCOME">Serve the community and earn income</string>
    <string name="YOURID">Your ID</string>
    <string name="BANKACCOUNT">Bank Account</string>
    <string name="OPERATIONSETTINGS">Operation settings</string>
    <string name="TODAYSMENU">Today\'s menu</string>
    <string name="LIST">List</string>
    <string name="NEXT">Next</string>
    <string name="IDPHOTO">ID Photo</string>
    <string name="TAXPAYERID">Taxpayer ID</string>
    <string name="SAVELOGOUT">Save/Log Out</string>
    <string name="SOCIALSECURITYNUMBERSSN">Social Security Number，SSN</string>
    <string name="EMPLOYERIDENTIFICATIONNUMBEREIN">Employer Identification Number，EIN</string>
    <string name="MANAGER">Manager</string>
    <string name="FULLNAME">Full name</string>
    <string name="MAILINGADDRESS">Mailing Address</string>
    <string name="COUNTRYREGION">Country/Region</string>
    <string name="STREETADDRESS">Street Address</string>
    <string name="APTSUITEOPTIONAL">Apt/Suite#(optional)</string>
    <string name="CITY">City</string>
    <string name="STATEPROVINCE">State/Province</string>
    <string name="ZIP">Zip</string>
    <string name="ZIP1">Postal code（ZIP）</string>
    <string name="UNITEDSTATES">United States</string>
    <string name="CANADA">Canada</string>
    <string name="MEXICO">Mexico</string>
    <string name="PERMANENTLYDEACTIVATE">Deactivate</string>
    <string name="ISTODAYSMENUREADY">Is today\'s menu ready?</string>
    <string name="NAMEANDMAINDISH">Name and Main Dish</string>
    <string name="NAME18CHARACTERS">Name</string>
    <string name="MAINDISH30CHARACTERS">Main Dish</string>
    <string name="EGYANGKITCHEN">E.g.Yang Kitchen</string>
    <string name="EGBURGERPIZZA">E.g.Burger，Pizza</string>
    <string name="GEOGRAPHICLOCATION">Geographic location</string>
    <string name="KEYWORDS">keywords</string>
    <string name="EGCHINESEDUMPLINGS">E.g.Chinese,Dumplings</string>
    <string name="CANONLYCHOOSETWO">Can only choose two(optional)</string>
    <string name="BUSINESSHOURS">Business hours</string>
    <string name="OPEN">Open</string>
    <string name="CLOSEDDOOR">Closed</string>
    <string name="MINIMUMDELIVERY">Minimum delivery</string>
    <string name="SHIPPINGNOTINCLUDED">Shipping not included</string>
    <string name="DELIVERYAREARANGE">Delivery Area</string>
    <string name="RADIUSISLESSTHANOREQUALTOMILE">Radius (Mile)</string>
    <string name="DATE">Date</string>
    <string name="TIME">Time</string>
    <string name="MAPS">Maps</string>
    <string name="GOOGLEMAPS">Google Maps</string>
    <string name="APPLEMAPS">Apple Maps</string>
    <string name="ORDERHISTORY">Order History</string>
    <string name="TRANSACTIONHISTORY">Transaction History</string>
    <string name="SALES">Sales</string>
    <string name="SERVICEPAYOUTEVERYWEDNESDAY">*15% Service Fee/Payout every Wednesday</string>
    <string name="RESETALLCUISINES">Reset/ALL Cuisines</string>
    <string name="ENTERYOURDELIVERYADDRESS">Enter your delivery address</string>
    <string name="BUSINESS">Business</string>
</resources>