<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FFFFFF">

<com.yum.two_yum.utile.pulltorefresh.PullToRefreshScrollView
    android:id="@+id/scroll_view"
    android:visibility="visible"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:descendantFocusability="beforeDescendants"
        android:id="@+id/title"
        android:visibility="visible"
        android:orientation="vertical"
        android:gravity="bottom|center"
        android:layout_width="match_parent"
        android:layout_height="136dp">

        <LinearLayout
            android:orientation="vertical"
            android:paddingBottom="@dimen/header_footer_top_bottom_padding"
            android:paddingLeft="@dimen/header_footer_left_right_padding"
            android:paddingRight="@dimen/header_footer_left_right_padding"
            android:paddingTop="@dimen/header_footer_top_bottom_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:visibility="visible"
                android:indeterminateDrawable="@drawable/progressbar_rotate"
                android:layout_height="20dp" />
        </LinearLayout>
    </LinearLayout>

    <com.yum.two_yum.utile.view.NoSlideListView
        android:id="@+id/nearby_lv"
        android:layout_below="@+id/title"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />


</RelativeLayout>
</com.yum.two_yum.utile.pulltorefresh.PullToRefreshScrollView>
    <LinearLayout
        android:id="@+id/no_data_layout"
        android:orientation="vertical"
        android:gravity="center|top"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/no_service_title"
            android:textStyle="bold"
            android:layout_marginTop="180dp"
            android:textSize="20dp"
            android:textColor="@android:color/black"
            android:text="@string/NOSERVICENEARBY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textSize="18dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="9dp"
            android:gravity="center"
            android:layout_marginBottom="31dp"
            android:textColor="@color/color_484848"
            android:text="@string/WILLSOONHAVESERVICESTAYTUNEDYOUCANLISTMENUTOPROVIDESERVICESERVETHECOMMUNITYANDEARNINCOME"
            android:layout_width="wrap_content"
            android:layout_height="181dp" />
        <LinearLayout
            android:id="@+id/no_service_prompt"
            android:layout_marginTop="22dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:visibility="gone"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="1"
                android:visibility="visible"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="@android:color/black"
                android:text="@string/ME"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageView
                android:src="@mipmap/right_arrow_my"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_weight="1"
                android:visibility="visible"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="@android:color/black"
                android:text="@string/LISTYOURMENUYOU"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageView
                android:src="@mipmap/right_arrow_my"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_weight="1"
                android:visibility="visible"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="@android:color/black"
                android:text="@string/BUSINESS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/release_btn"
            android:paddingTop="11dp"
            android:visibility="visible"
            android:paddingBottom="11dp"
            android:gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:textSize="20dp"
            android:textColor="@android:color/white"
            android:text="@string/RESETALLCUISINES"
            android:background="@drawable/button_blue_bright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/no_location_layout"
        android:orientation="vertical"
        android:gravity="center|top"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginTop="180dp"
            android:textColor="@color/color_484848"
            android:text="@string/LOCATIONSERVICESDISABLED"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textSize="18dp"
            android:visibility="gone"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="9dp"
            android:gravity="center"
            android:layout_marginBottom="31dp"
            android:textColor="@color/color_484848"
            android:text="@string/GOTOSETTINGSPRIVACYLOCATIONSERVICES2YUMUSESYOURLOCATIONTOSHOWYOUFOODNEARBY"
            android:layout_width="wrap_content"
            android:layout_height="181dp" />
        <TextView
            android:id="@+id/location_btn"
            android:paddingTop="11dp"
            android:paddingBottom="11dp"
            android:gravity="center"
            android:visibility="gone"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:textColor="@android:color/white"
            android:text="@string/GOTURNON"
            android:background="@drawable/button_blue_bright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:textSize="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginLeft="18dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/color_FF0A1710"
            android:text="@string/YUM2USESYOURLOCATIONTOSHOWYOUFOODNEARBY"
            android:layout_marginTop="234dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/title_view"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="136dp">
        <LinearLayout

            android:id="@+id/search_btn"
            android:layout_marginTop="26dp"
            android:layout_marginRight="17dp"
            android:layout_marginLeft="17dp"
            android:paddingRight="12dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:background="@mipmap/search_for_img"
            android:orientation="horizontal"
            android:paddingLeft="12dp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="61dp">
            <ImageView
                android:src="@mipmap/search"
                android:layout_width="28dp"
                android:layout_height="28dp" />
            <TextView
                android:layout_marginLeft="7dp"
                android:layout_marginTop="1dp"
                android:textSize="16dp"
                android:singleLine="true"
                android:layout_marginBottom="1dp"
                android:text="@string/ENTERYOURDELIVERYADDRESS"

                android:textColor="@color/color_FF919191"
                android:gravity="center_vertical"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/btns_layout"
            android:orientation="horizontal"
            android:layout_marginTop="9dp"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="24dp"
            android:layout_width="match_parent"
            android:layout_height="32dp">
            <TextView
                android:id="@+id/distance_btn"
                android:layout_marginRight="13dp"
                android:gravity="center"
                android:text="@string/DISTANCERECENT"
                android:textSize="12dp"
                android:textColor="@color/color_484848"
                android:background="@drawable/search_for_layout"
                android:layout_width="77dp"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/collection_btn"
                android:layout_marginRight="13dp"
                android:gravity="center"
                android:text="@string/FAVORITESALL"
                android:textSize="12dp"
                android:textColor="@color/color_484848"
                android:background="@drawable/search_for_layout"
                android:layout_width="77dp"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/filter"
                android:layout_marginRight="13dp"
                android:gravity="center"
                android:text="@string/FILTERS"
                android:textSize="12dp"
                android:textColor="@color/color_484848"
                android:background="@drawable/search_for_layout"
                android:layout_width="77dp"
                android:layout_height="match_parent" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>