<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingTop="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingBottom="8dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp">

        <ImageView
            android:id="@+id/del_btn"
            android:layout_width="48dp"
            android:paddingRight="20dp"
            android:layout_height="28dp"
            android:src="@mipmap/back_img"
            android:top="28dp" />
        <TextView
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="right"
            android:textColor="@color/color_484848"
            android:text="@string/ORDERHISTORY"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/to_day_btn"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="right"
            android:textColor="@color/color_484848"
            android:text="@string/TODAY"
            android:textSize="16dp" />
    </RelativeLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_FFd7d7d7"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:textSize="12dp"
            android:maxLines="1"
            android:gravity="center"
            android:text="@string/DATE"
            android:textColor="@color/color_484848"
            android:layout_weight="3"
            android:layout_width="0px"
            android:layout_height="match_parent" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/color_FFd7d7d7"/>
        <TextView
            android:textSize="12dp"
            android:maxLines="1"
            android:gravity="center"
            android:text="@string/ORDERS"
            android:textColor="@color/color_484848"
            android:layout_weight="2"
            android:layout_width="0px"
            android:layout_height="match_parent" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/color_FFd7d7d7"/>
        <TextView
            android:textSize="12dp"
            android:maxLines="1"
            android:gravity="center"
            android:text="@string/THENCANCELED"
            android:textColor="@color/color_484848"
            android:layout_weight="2"
            android:layout_width="0px"
            android:layout_height="match_parent" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/color_FFd7d7d7"/>
        <TextView
            android:textSize="12dp"
            android:maxLines="1"
            android:gravity="center"
            android:text="@string/THENDELIVERED"
            android:textColor="@color/color_484848"
            android:layout_weight="2"
            android:layout_width="0px"
            android:layout_height="match_parent" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/color_FFd7d7d7"/>
        <TextView
            android:textSize="12dp"
            android:maxLines="1"
            android:gravity="center"
            android:text="@string/SALES"
            android:textColor="@color/color_484848"
            android:layout_weight="3"
            android:layout_width="0px"
            android:layout_height="match_parent" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_FFd7d7d7"/>
    <com.yum.two_yum.utile.pulltorefresh.PullToRefreshScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <com.yum.two_yum.utile.view.NoSlideListView
        android:id="@+id/content_lv"
        android:scrollbars="none"
        android:dividerHeight="0px"
        android:divider="@color/white"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
        </LinearLayout>
    </com.yum.two_yum.utile.pulltorefresh.PullToRefreshScrollView>
</LinearLayout>