<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="270dp"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="270dp"
            android:layout_height="145dp"
            android:background="@drawable/area_bg_gray_big_btn"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">



            <TextView
                android:id="@+id/prompt_tv"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:textColor="@color/black"
                android:text="@string/RETURNANDEMPTYSHOPPINGCART"
                android:layout_width="match_parent"
                android:layout_height="74dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_above="@+id/btn_layout"
                android:background="@color/color_FFd7d7d7"/>
            <LinearLayout
                android:id="@+id/btn_layout"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">

                <TextView
                    android:background="@drawable/area_lower_right_corner_btn"
                    android:id="@+id/ok_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/YES"
                    android:textColor="@color/color_007AFF"
                    android:textSize="17dp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/color_FFd7d7d7" />

                <TextView
                    android:id="@+id/cancel_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="@drawable/area_lower_left_corner_btn"
                    android:text="@string/CANCEL"
                    android:textColor="@color/color_007AFF"
                    android:textSize="17dp" />
            </LinearLayout>

        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>